# nomad-simulations

./: .gitignore  404.html  BREAKING_CHANGES_ANALYSIS.md  CITATION.cff  PR_260_REVIEW.md  README.md  __init__.py  docker-compose.yml  index.html  mkdocs.yml  nomad_plugin_metadata.yaml  pyproject.toml  pyproject.toml.local  requirements_docs.txt  schema-subset.ttl  schema.ttl  test_image.md  test_pr_validation.py
.dev_notes/: README.md  electronic_states_migration.md  workflow_convergence_design_notes.md
.github/: pull_request_template.md  release.yml
.github/workflows/: actions.yml  mkdocs-deploy.yml
.metadata/: nomad_plugin_metadata.auto.yaml  nomad_plugin_metadata.manual.yaml
assets/: mermaid-uml-markers.js
contact/: index.html
contributor_guides/documentation_automation_guide/: index.html
contributor_guides/documentation_writing_guide/: index.html
contributor_guides/overview/: index.html
contributor_guides/schema_development_guide/: index.html
docs/: api_reference.md  contact.md  general.md  index.md  normalize.md  software-development-guide.md
docs/assets/: click-zoom.js  mermaid-click-zoom.js  mermaid-dark-mode.js  mermaid-zoom.js  svg-pan-zoom-diagram.js
docs/atoms_state/: electronic_states.md
docs/contributor_guides/: documentation_automation_guide.md  documentation_writing_guide.md  overview.md  schema_development_guide.md
docs/dev_docs/: documentation_automation_guide.md  documentation_writing_guide.md  overview.md  representation_design_history.md
docs/explanation/: data_types.md  doc_guidelines.md  general.md  overview.md  simulation_entry.md
docs/explanation_old/: general.md  index.md
docs/model_method/: model_method.md
docs/model_system/: model_system.md  representation.md
docs/outputs/: outputs.md
docs/schema/: .pages  atoms_state.diagram.md  atoms_state.md  basis.diagram.md  basis.md  cell.diagram.md  cell.md  chemical_formula.diagram.md  chemical_formula.md  convergence.md  electronic_properties.diagram.md  electronic_properties.md  force_field.diagram.md  force_field.md  index.md  manybody_properties.diagram.md  manybody_properties.md  methods.diagram.md  methods.md  model_method.diagram.md  model_method.md  model_method_electronic.diagram.md  model_method_electronic.md  model_system.diagram.md  model_system.md  numerical_settings.diagram.md  numerical_settings.md  outputs.diagram.md  outputs.md  particle_state.diagram.md  particle_state.md  particle_states.diagram.md  particle_states.md  phonon_elastic.diagram.md  phonon_elastic.md  physical_property.diagram.md  physical_property.md  representations.diagram.md  representations.md  results.diagram.md  (+41 more)
docs/schema_development/: data_types.md  model_method_vs_numerical_settings.md  model_system_usage_guidelines.md  normalize.md  overview.md  simulation_entry_population.md
docs/schema_old/: overview.md  software-development-guide.md
docs/snippets/: README.md  __init__.py
docs/stylesheets/: extra.css  mermaid-zoom.css  svg-diagram.css
docs/tutorials/: overview.md  standalone_schema_tutorial.md
docs/user-guide/: model_system.md  program.md
explanation/overview/: index.html
explanation/simulation_entry/: index.html
schema/: index.html
schema/chemical_formula/: index.html
schema/chemical_formula.diagram/: index.html
schema/electronic_properties/: index.html
schema/electronic_properties.diagram/: index.html
scripts/: README.md  README_DIAGRAM_OPTIONS.md  README_DIAGRAM_SIMPLIFICATION.md  README_PNG.md  SVG_IMPLEMENTATION.md  benchmark_hdf5_bulky_numerics.py  benchmark_molecular_orbitals_hdf5.py  clean_svg_remnants.py  diagram_legend.py  fix_duplicate_svg.py  gen_diagrams.py  gen_diagrams.py.backup  gen_docs.py  gen_docs_with_png.py  gen_examples.py  gen_webvowl_subset.py  generate_docs_pipeline.py  generate_explanation_fragments.py  mermaid_to_png.py  mermaid_to_svg.py  mermaid_to_svg_simple.py  meta_introspect.py  remove_svg_blocks.py  verticals.py
search/: search_index.json
snippets/: index.html
stylesheets/: extra.css
templates/: index.md.j2  vertical.md.j2
tests/: conftest.py  test_atoms_state.py  test_basis_set.py  test_contributions.py  test_data_types.py  test_doc_snippets.py  test_files.py  test_force_field.py  test_general.py  test_general_particles.py  test_model_method.py  test_model_system.py  test_new_ModelSystem_and_AtomsState.py  test_numerical_settings.py  test_outputs.py  test_physical_properties.py  test_rdf.py  test_variables.py  test_workflow_doc_verticals.py
(+294 files in other folders)
